@@ -38,10 +38,10 @@ import org.apache.zookeeper.ZooDefs.Ids;
 
 import com.google.protobuf.TextFormat;
 import com.google.common.base.Joiner;
+import static com.google.common.base.Charsets.UTF_8;
 
 import java.net.InetAddress;
 import java.net.UnknownHostException;
-import java.nio.charset.Charset;
 
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ConcurrentHashMap;
@@ -49,6 +49,7 @@ import java.util.Map;
 import java.util.List;
 import java.util.Collections;
 import java.util.Arrays;
+
 
 import java.util.regex.Pattern;
 import java.util.regex.Matcher;
@@ -73,7 +74,6 @@ import org.slf4j.LoggerFactory;
  */
 public class ZkLedgerUnderreplicationManager implements LedgerUnderreplicationManager {
     static final Logger LOG = LoggerFactory.getLogger(ZkLedgerUnderreplicationManager.class);
-    static final Charset UTF8 = Charset.forName("UTF-8");
     static final String LAYOUT="BASIC";
     static final int LAYOUT_VERSION=1;
 
@@ -139,7 +139,7 @@ public class ZkLedgerUnderreplicationManager implements LedgerUnderreplicationMa
                     = LedgerRereplicationLayoutFormat.newBuilder();
                 builder.setType(LAYOUT).setVersion(LAYOUT_VERSION);
                 try {
-                    zkc.create(layoutZNode, TextFormat.printToString(builder.build()).getBytes(UTF8),
+                    zkc.create(layoutZNode, TextFormat.printToString(builder.build()).getBytes(UTF_8),
                                Ids.OPEN_ACL_UNSAFE, CreateMode.PERSISTENT);
                 } catch (KeeperException.NodeExistsException nne) {
                     // someone else managed to create it
@@ -152,7 +152,7 @@ public class ZkLedgerUnderreplicationManager implements LedgerUnderreplicationMa
                     = LedgerRereplicationLayoutFormat.newBuilder();
 
                 try {
-                    TextFormat.merge(new String(layoutData, UTF8), builder);
+                    TextFormat.merge(new String(layoutData, UTF_8), builder);
                     LedgerRereplicationLayoutFormat layout = builder.build();
                     if (!layout.getType().equals(LAYOUT)
                             || layout.getVersion() != LAYOUT_VERSION) {
@@ -217,7 +217,7 @@ public class ZkLedgerUnderreplicationManager implements LedgerUnderreplicationMa
                 try {
                     builder.addReplica(missingReplica);
                     ZkUtils.createFullPathOptimistic(zkc, znode, TextFormat
-                            .printToString(builder.build()).getBytes(UTF8),
+                            .printToString(builder.build()).getBytes(UTF_8),
                             Ids.OPEN_ACL_UNSAFE, CreateMode.PERSISTENT);
                 } catch (KeeperException.NodeExistsException nee) {
                     Stat s = zkc.exists(znode, false);
@@ -227,14 +227,14 @@ public class ZkLedgerUnderreplicationManager implements LedgerUnderreplicationMa
                     try {
                         byte[] bytes = zkc.getData(znode, false, s);
                         builder.clear();
-                        TextFormat.merge(new String(bytes, UTF8), builder);
+                        TextFormat.merge(new String(bytes, UTF_8), builder);
                         UnderreplicatedLedgerFormat data = builder.build();
                         if (data.getReplicaList().contains(missingReplica)) {
                             return; // nothing to add
                         }
                         builder.addReplica(missingReplica);
                         zkc.setData(znode,
-                                    TextFormat.printToString(builder.build()).getBytes(UTF8),
+                                    TextFormat.printToString(builder.build()).getBytes(UTF_8),
                                     s.getVersion());
                     } catch (KeeperException.NoNodeException nne) {
                         continue;
@@ -329,7 +329,7 @@ public class ZkLedgerUnderreplicationManager implements LedgerUnderreplicationMa
                     }
 
                     long ledgerId = getLedgerId(tryChild);
-                    zkc.create(lockPath, TextFormat.printToString(lockData).getBytes(UTF8),
+                    zkc.create(lockPath, TextFormat.printToString(lockData).getBytes(UTF_8),
                                Ids.OPEN_ACL_UNSAFE, CreateMode.EPHEMERAL);
                     heldLocks.put(ledgerId, new Lock(lockPath, stat.getVersion()));
                     return ledgerId;
